added scss and created card

--- a/index.html
+++ b/index.html
@@ -4,12 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>GIT</title>
 </head>
 <body>
-    <h1>cześć</h1>
-    <p>to jest paragraf nr 1</p>
-    <p>to jest paragraf nr 2</p>
+   
+    <div class="card">
+        <img src="https://cdn.galleries.smcloud.net/t/galleries/gf-r5L2-jmua-ue7D_dog-niemiecki-lagodny-olbrzym-1920x1080-nocrop.jpg" alt="" class="card__img">
+        <div class="card__body">
+            <h2 class="card__title">Fajny psiak</h2>
+            <p class="card__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi necessitatibus minima nobis totam, aperiam vel error aliquam rerum eius dolorem quas nam deserunt voluptates sed recusandae, id assumenda? Voluptate magni at, commodi et veritatis corrupti!</p>
+            <div class="card__btns">
+                <div class="card__btn">Informacje</div>
+                <div class="card__btn card__btn--highlight">Zagłosuj</div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
